--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
     <h1> Muhammad Jasim </h1>
     <h2>git checkout feature</h2>
     <h3>git checkout feature</h3>
-<<<<<<< HEAD
     <h4>hhhh(world)</h4>
-=======
     <h4>hhhh (hello)</h4>
->>>>>>> main
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, impedit!</p>
 </body>
 </html>
