--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <h1> Muhammad Jasim </h1>
     <h2>git checkout feature</h2>
     <h3>git checkout feature</h3>
-    <h4>hhhh(world)</h4>
     <h4>hhhh (hello)</h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, impedit!</p>
+    <p>hello my name is jasim i belong to district swabi</p>
+    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam repudiandae cum vitae consequuntur? 
+        Iure quod obcaecati non possimus quos autem.</div>
 </body>
 </html>
